UI ENHANCEMENT: added more info on about, update the resume link and fix the footer is not showing on mobile view

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -58,7 +58,6 @@
 
   .footer-icons {
     justify-content: center;
-    margin-top: 1rem;
   }
 }
 
